# Generals-Mac-iOS-iPad

./: CMakePresets.json  README.md  vcpkg.json
.github/workflows/: build-android.yml
Android/app/: build.gradle
Android/app/src/main/java/com/generals/zh/ui/: MainActivity.kt
Android/app/src/main/res/drawable/: window_background.xml
Android/app/src/main/res/values/: themes.xml
Core/GameEngine/Include/GameClient/: GadgetTextEntry.h
Core/GameEngine/Include/GameLogic/: Damage.h
Core/GameEngine/Include/GameNetwork/GameSpy/: LobbyUtils.h  PeerDefs.h
Core/GameEngine/Source/Common/INI/: INI.cpp
Core/GameEngine/Source/Common/System/: Debug.cpp  GameMemory.cpp
Core/GameEngine/Source/GameClient/GUI/: GameFont.cpp
Core/GameEngine/Source/GameClient/GUI/ControlBar/: ControlBar.cpp
Core/GameEngine/Source/GameClient/GUI/Gadget/: GadgetPushButton.cpp
Core/GameEngine/Source/GameLogic/System/: Damage.cpp
Core/GameEngine/Source/GameNetwork/GameSpy/: LadderDefs.cpp  LobbyUtils.cpp  MainMenuUtils.cpp
Core/GameEngineDevice/Source/VideoDevice/FFmpeg/: FFmpegVideoPlayer.cpp
Core/GameEngineDevice/Source/W3DDevice/GameClient/: W3DVideoBuffer.cpp
Core/Libraries/Source/WWVegas/WW3D2/: dx8wrapper.cpp  render2dsentence.cpp
Generals/Code/GameEngine/: CMakeLists.txt
Generals/Code/GameEngine/Include/GameNetwork/GeneralsOnline/: NextGenMP_defines.h
GeneralsMD/Code/CompatLib/Include/: types_compat.h
GeneralsMD/Code/GameEngine/: CMakeLists.txt
GeneralsMD/Code/GameEngine/Include/GameNetwork/GeneralsOnline/: GeneralsOnline_AndroidGlue.h  NetworkMesh.h  OnlineServices_Auth.h  OnlineServices_LobbyInterface.h  PluginInterfaces.h
GeneralsMD/Code/GameEngine/Include/GameNetwork/GeneralsOnline/HTTP/: HTTPRequest.h
GeneralsMD/Code/GameEngine/Source/Common/: GameEngine.cpp  Recorder.cpp
GeneralsMD/Code/GameEngine/Source/Common/RTS/: Science.cpp
GeneralsMD/Code/GameEngine/Source/GameClient/GUI/: GameWindowManager.cpp  GameWindowManagerScript.cpp
GeneralsMD/Code/GameEngine/Source/GameClient/GUI/GUICallbacks/Menus/: PopupPlayerInfo.cpp  WOLBuddyOverlay.cpp  WOLGameSetupMenu.cpp  WOLLobbyMenu.cpp  WOLLoginMenu.cpp  WOLQuickMatchMenu.cpp
GeneralsMD/Code/GameEngine/Source/GameLogic/Object/Update/: AIUpdate.cpp
GeneralsMD/Code/GameEngine/Source/GameNetwork/GeneralsOnline/: GeneralsOnline_AndroidGlue.cpp  NGMPGame.cpp  NGMP_Helpers.cpp  NetworkMesh.cpp  NextGenTransport.cpp  OnlineServices_LobbyInterface.cpp  OnlineServices_RoomsInterface.cpp  PluginInterfaces.cpp
GeneralsMD/Code/GameEngine/Source/GameNetwork/GeneralsOnline/HTTP/: HTTPRequest.cpp
GeneralsMD/Code/GameEngineDevice/Include/: SDL3GameEngine.h
GeneralsMD/Code/GameEngineDevice/Source/: SDL3GameEngine.cpp
GeneralsMD/Code/GameEngineDevice/Source/W3DDevice/GameClient/: W3DDisplay.cpp  W3DDisplayString.cpp
GeneralsMD/Code/Main/: AndroidCrashHandler.cpp  CMakeLists.txt  SDL3Main.cpp
GeneralsMD/Data/Window/Menus/: GeneralsOnlineHome.wnd  GeneralsOnlineQuickMatch.wnd
Patches/: dxvk-android.patch  dxvk-vulkan11-adaptive.patch
android/app/: build.gradle
android/app/src/main/: AndroidManifest.xml
android/app/src/main/java/com/generalsx/zerohour/: GeneralsOnlineActivity.java  GeneralsOnlineSession.java  GeneralsZHActivity.java  LocaleHelper.java  SetupActivity.java
android/app/src/main/res/values/: colors.xml  themes.xml
android/app/src/main/res/values-b+isv/: strings.xml
android/app/src/main/res/values/values-night/: colors.xml
android/app/src/main/res/xml/: file_paths.xml
cmake/: dx8.cmake
cmake/vcpkg-ports/gamenetworkingsockets/: android-os-check.patch  portfile.cmake
docs/port/: ANDROID_PORT.md  PORTING_PLAYBOOK.md  RELEASE_CHECKLIST.md
